# rust-plantronics

./: .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
src/: config.rs  main.rs
src/encoding/: mod.rs
